Fix jumpiness in the layout due to dynamic font size on the nav

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -18,6 +18,7 @@
   top: 10px;
   right: 0px;
   width: 55px;
+  font-size: 24px;
 }
 
 .App-nav a {
