--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+body, html {
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   background-color: #000;
   color: #fff;
-  margin: 0;
-  padding: 0;
 }
 
 a, a:visited {
